[project]
name = "goodmoodbot"
version = "0.1.0"
description = "Bot for good mood"
authors = [
    {name = "dmitryprogrammer",email = "dpishchalka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "aiogram (>=3.26.0,<4.0.0)"
]
[tool.poetry.dependencies]
python = ">=3.10,<3.15"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
